started the notebook

--- a/scripts/project1.ipynb
+++ b/scripts/project1.ipynb
@@ -2,16 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# Useful starting lines\n",
     "%matplotlib inline\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "#just for the notebook\n",
+    "%run implementations\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
    ]
@@ -25,13 +34,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "from proj1_helpers import *\n",
-    "DATA_TRAIN_PATH = '' # TODO: download train data and supply path here \n",
+    "DATA_TRAIN_PATH = '../data/train.csv' # TODO: download train data and supply path here \n",
     "y, tX, ids = load_csv_data(DATA_TRAIN_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train, y_train, x_test, y_test = split_data(tX, y, 0.8, seed=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Append y values as column to later divide y into buckets corresponding with x values\n",
+    "x_train = np.column_stack((x_train, y_train))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split training x into buckets\n",
+    "buckets = get_buckets(x_train)"
    ]
   },
   {
@@ -50,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,15 +106,6 @@
     "y_pred = predict_labels(weights, tX_test)\n",
     "create_csv_submission(ids_test, y_pred, OUTPUT_PATH)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
