--- a/scripts/project1.ipynb
+++ b/scripts/project1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -34,18 +34,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "from proj1_helpers import *\n",
     "DATA_TRAIN_PATH = '../data/train.csv' # TODO: download train data and supply path here \n",
-    "y, tX, ids = load_csv_data(DATA_TRAIN_PATH)"
+    "DATA_TEST_PATH = '../data/test.csv'\n",
+    "y, tX, train_ids = load_csv_data(DATA_TRAIN_PATH)\n",
+    "subsmission_y, submission_x, test_ids = load_csv_data(DATA_TEST_PATH)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DEGREE = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,22 +65,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Append y values as column to later divide y into buckets corresponding with x values\n",
-    "x_train = np.column_stack((x_train, y_train))"
+    "x_train = np.column_stack((x_train, y_train))\n",
+    "x_test = np.column_stack((x_test, y_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Split training x into buckets\n",
-    "buckets = get_buckets(x_train)"
+    "# get all the needed buckets\n",
+    "buckets = get_buckets(x_train)\n",
+    "# y\n",
+    "y_buckets = []\n",
+    "for i in range(len(buckets)):\n",
+    "    y_buckets.append(buckets[i][:, -1])\n",
+    "    buckets[i] = np.delete(buckets[i], -1, 1)\n",
+    "# test\n",
+    "test_buckets = get_buckets(x_test)\n",
+    "submission_x_buckets = get_buckets(submission_x.copy())\n",
+    "# test y\n",
+    "test_y_buckets = []\n",
+    "for i in range(len(test_buckets)):\n",
+    "    test_y_buckets.append(test_buckets[i][:, -1])\n",
+    "    test_buckets[i] = np.delete(test_buckets[i], -1, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Normalize the matrices\n",
+    "for i in range(len(buckets)):\n",
+    "    buckets[i] = normalize(buckets[i])\n",
+    "    test_buckets[i] = normalize(test_buckets[i])\n",
+    "    submission_x_buckets[i] = normalize(submission_x_buckets[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "MemoryError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-50-c3867ffc3ac0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mw\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbuckets\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     w_rr, loss_rr = logistic_regression(y=y_buckets[i], tx=buckets[i], initial_w=w,\n\u001b[0;32m----> 5\u001b[0;31m                                         max_iters=100, gamma=0.01)\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0mweights\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mw_rr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/epfl/ml/projects/ML-Project-1/scripts/implementations.py\u001b[0m in \u001b[0;36mlogistic_regression\u001b[0;34m(y, tx, initial_w, max_iters, gamma)\u001b[0m\n\u001b[1;32m    104\u001b[0m         \u001b[0;31m# Update rule\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    105\u001b[0m         \u001b[0msig\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msigma\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mw\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 106\u001b[0;31m         \u001b[0msig\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msig\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    107\u001b[0m         \u001b[0mgrad\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtranspose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msig\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    108\u001b[0m         \u001b[0mw\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mw\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mgamma\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mgrad\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mMemoryError\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "weights = []\n",
+    "for i in range(len(buckets)):\n",
+    "    w = np.zeros((buckets[i].shape[1], 1))\n",
+    "    w_rr, loss_rr = logistic_regression(y=y_buckets[i], tx=buckets[i], initial_w=w,\n",
+    "                                        max_iters=100, gamma=0.01)\n",
+    "    weights.append(w_rr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weights = []\n",
+    "for i in range(len(buckets)):\n",
+    "    w = np.zeros((buckets[i].shape[1], 1))\n",
+    "    w_rr, loss_rr = ridge_regression(y=y_buckets[i], tx=buckets[i], lambda_=0.5)\n",
+    "    weights.append(w_rr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def accuracy(train_buckets, test_buckets, test_y_buckets, weights, degree, lambda_):\n",
+    "    correct_predictions = 0\n",
+    "    len_data = 0\n",
+    "    for i in range(len(train_buckets)):\n",
+    "        rr_accuracy = compute_accuracy(weights[i], test_buckets[i], test_y_buckets[i])\n",
+    "        correct_predictions += (rr_accuracy * len(test_buckets[i]))\n",
+    "        len_data += len(test_buckets[i])\n",
+    "    total_accuracy = correct_predictions / len_data\n",
+    "    print(f\"Accuracy = {total_accuracy} with degree = {degree} and lambda = {lambda_}\")\n",
+    "    return total_accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy = 0.7637 with degree = 3 and lambda = 0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "acc = accuracy(train_buckets=buckets, test_buckets=test_buckets, test_y_buckets=test_y_buckets,\n",
+    "                            weights=weights, degree=3, lambda_=0.5)"
    ]
   },
   {
