first submission file

--- a/scripts/project1.ipynb
+++ b/scripts/project1.ipynb
@@ -139,14 +139,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
     "weights = []\n",
     "for i in range(len(buckets)):\n",
     "    w = np.zeros((buckets[i].shape[1], 1))\n",
-    "    w_rr, loss_rr = ridge_regression(y=y_buckets[i], tx=buckets[i], lambda_=0.5)\n",
+    "    w_rr, loss_rr = ridge_regression(y=y_buckets[i], tx=buckets[i], lambda_=0.7)\n",
     "    weights.append(w_rr)"
    ]
   },
@@ -170,20 +170,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy = 0.7637 with degree = 3 and lambda = 0.5\n"
+      "Accuracy = 0.76372 with degree = 3 and lambda = 0.7\n"
      ]
     }
    ],
    "source": [
     "acc = accuracy(train_buckets=buckets, test_buckets=test_buckets, test_y_buckets=test_y_buckets,\n",
-    "                            weights=weights, degree=3, lambda_=0.5)"
+    "                            weights=weights, degree=3, lambda_=0.7)"
    ]
   },
   {
@@ -202,11 +202,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_TEST_PATH = '' # TODO: download train data and supply path here \n",
+    "DATA_TEST_PATH = '../data/test.csv' # TODO: download train data and supply path here \n",
     "_, tX_test, ids_test = load_csv_data(DATA_TEST_PATH)"
    ]
   },
@@ -216,7 +216,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "OUTPUT_PATH = '' # TODO: fill in desired name of output file for submission\n",
+    "OUTPUT_PATH = '../data/submission.csv' # TODO: fill in desired name of output file for submission\n",
     "y_pred = predict_labels(weights, tX_test)\n",
     "create_csv_submission(ids_test, y_pred, OUTPUT_PATH)"
    ]
