--- a/scripts/project1.ipynb
+++ b/scripts/project1.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# Useful starting lines\n",
     "%matplotlib inline\n",
@@ -87,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,32 +146,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "weights = []\n",
-    "for i in range(len(buckets)):\n",
-    "    w_rr, loss_rr = ridge_regression(y=y_buckets[i], tx=build_poly(buckets[i], 2), lambda_=0.0001)\n",
-    "    weights.append(w_rr)"
+    "def accuracy(train_buckets, test_buckets, test_y_buckets, weights, degree_and_lambda):\n",
+    "    correct_predictions = 0\n",
+    "    len_data = 0\n",
+    "    for i in range(len(train_buckets)):\n",
+    "        degree = degree_and_lambda[i][\"degree\"]\n",
+    "        rr_accuracy = compute_accuracy(weights[i], build_poly(test_buckets[i], degree), test_y_buckets[i])\n",
+    "        correct_predictions += (rr_accuracy * len(build_poly(test_buckets[i], degree)))\n",
+    "        len_data += len(build_poly(test_buckets[i], degree))\n",
+    "    total_accuracy = correct_predictions / len_data\n",
+    "    print(f\"Accuracy = {total_accuracy}\")\n",
+    "    return total_accuracy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14738"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def accuracy(train_buckets, test_buckets, test_y_buckets, weights, degree, lambda_):\n",
-    "    correct_predictions = 0\n",
-    "    len_data = 0\n",
-    "    for i in range(len(train_buckets)):\n",
-    "        rr_accuracy = compute_accuracy(weights[i], test_buckets[i], test_y_buckets[i])\n",
-    "        correct_predictions += (rr_accuracy * len(test_buckets[i]))\n",
-    "        len_data += len(test_buckets[i])\n",
-    "    total_accuracy = correct_predictions / len_data\n",
-    "    print(f\"Accuracy = {total_accuracy} with degree = {degree} and lambda = {lambda_}\")\n",
-    "    return total_accuracy"
+    "len(test_buckets[0])"
    ]
   },
   {
@@ -179,49 +197,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "shapes (14738,31) and (66,) not aligned: 31 (dim 1) != 66 (dim 0)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-46a11d84153a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m acc = accuracy(train_buckets=buckets, test_buckets=test_buckets, test_y_buckets=test_y_buckets,\n\u001b[0;32m----> 2\u001b[0;31m                             weights=weights, degree=0, lambda_=0.05)\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-13-560ba1e330ed>\u001b[0m in \u001b[0;36maccuracy\u001b[0;34m(train_buckets, test_buckets, test_y_buckets, weights, degree, lambda_)\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mlen_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_buckets\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m         \u001b[0mrr_accuracy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcompute_accuracy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mweights\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_buckets\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_y_buckets\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m         \u001b[0mcorrect_predictions\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mrr_accuracy\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_buckets\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0mlen_data\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_buckets\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/epfl/ml/projects/ML-Project-1/scripts/implementations.py\u001b[0m in \u001b[0;36mcompute_accuracy\u001b[0;34m(w_train, x, y)\u001b[0m\n\u001b[1;32m    267\u001b[0m     \u001b[0mthe\u001b[0m \u001b[0maccuracy\u001b[0m \u001b[0mscore\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    268\u001b[0m     \"\"\"\n\u001b[0;32m--> 269\u001b[0;31m     \u001b[0mpred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpredict_labels\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mw_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    270\u001b[0m     \u001b[0mN\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    271\u001b[0m     \u001b[0mcount\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/epfl/ml/projects/ML-Project-1/scripts/proj1_helpers.py\u001b[0m in \u001b[0;36mpredict_labels\u001b[0;34m(weights, data)\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mpredict_labels\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mweights\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m     \u001b[0;34m\"\"\"Generates class predictions given weights, and a test data matrix\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m     \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweights\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     30\u001b[0m     \u001b[0my_pred\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwhere\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_pred\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m     \u001b[0my_pred\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwhere\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_pred\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: shapes (14738,31) and (66,) not aligned: 31 (dim 1) != 66 (dim 0)"
-     ]
-    }
-   ],
-   "source": [
-    "acc = accuracy(train_buckets=buckets, test_buckets=test_buckets, test_y_buckets=test_y_buckets,\n",
-    "                            weights=weights, degree=0, lambda_=0.05)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best lambdas : 0.30000000000000004\n",
-      "best degree 7\n",
-      "best lambdas : 0.1\n",
-      "best degree 7\n"
+      "best lambdas : 1.0\n",
+      "best degree 3\n",
+      "best lambdas : 1.0\n",
+      "best degree 3\n",
+      "best lambdas : 1.0\n",
+      "best degree 3\n",
+      "best lambdas : 1.0\n",
+      "best degree 3\n",
+      "best lambdas : 1.0\n",
+      "best degree 3\n",
+      "best lambdas : 1.0\n",
+      "best degree 3\n",
+      "best lambdas : 1.0\n",
+      "best degree 3\n",
+      "best lambdas : 1.0\n",
+      "best degree 3\n"
      ]
     }
    ],
    "source": [
+    "best_degree_lambda = []\n",
     "for i in range(len(buckets)):\n",
-    "    best_degree_selection(y=y_buckets[i], x=buckets[i], degrees=range(7, 12), \n",
-    "                      k_fold=5, lambdas=np.linspace(0.1, 1, 10))"
+    "    best_degree_lambda.append(best_degree_selection(y=y_buckets[i], x=buckets[i], degrees=[3], \n",
+    "                      k_fold=5, lambdas=np.linspace(0.1, 1, 10)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(93,)\n",
+      "(93,)\n",
+      "(93,)\n",
+      "(93,)\n",
+      "(93,)\n",
+      "(93,)\n",
+      "(93,)\n",
+      "(93,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "weights = []\n",
+    "for i in range(len(buckets)):\n",
+    "    degree = best_degree_lambda[i][\"degree\"]\n",
+    "    lambda_ = best_degree_lambda[i][\"lambda\"]\n",
+    "    w_rr, loss_rr = ridge_regression(y=y_buckets[i], tx=build_poly(buckets[i], degree), lambda_=lambda_)\n",
+    "    print(w_rr.shape)\n",
+    "    weights.append(w_rr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(14738, 93)"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "build_poly(test_buckets[0], 3).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy = 0.8027\n"
+     ]
+    }
+   ],
+   "source": [
+    "acc = accuracy(train_buckets=buckets, test_buckets=test_buckets, test_y_buckets=test_y_buckets,\n",
+    "                            weights=weights, degree_and_lambda=best_degree_lambda)"
    ]
   },
   {
@@ -230,7 +304,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "type(y_buckets)"
+    "ids_array = ids_test\n",
+    "pri_jet_num_feature = submission_x[:, 22]\n",
+    "der_mass_mmc_col_feature = submission_x_backup[:, 0]\n",
+    "ids_array = np.column_stack((ids_array, pri_jet_num_feature))\n",
+    "ids_array = np.column_stack((ids_array, der_mass_mmc_col_feature))"
    ]
   },
   {
