--- a/scripts/project1.ipynb
+++ b/scripts/project1.ipynb
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -206,18 +206,18 @@
      "text": [
       "best lambdas : 1.0\n",
       "best degree 3\n",
-      "best lambdas : 1.0\n",
+      "best lambdas : 0.01\n",
+      "best degree 3\n",
+      "best lambdas : 0.013894954943731374\n",
+      "best degree 5\n",
+      "best lambdas : 0.0517947467923121\n",
+      "best degree 3\n",
+      "best lambdas : 0.01\n",
       "best degree 3\n",
       "best lambdas : 1.0\n",
       "best degree 3\n",
       "best lambdas : 1.0\n",
-      "best degree 3\n",
-      "best lambdas : 1.0\n",
-      "best degree 3\n",
-      "best lambdas : 1.0\n",
-      "best degree 3\n",
-      "best lambdas : 1.0\n",
-      "best degree 3\n",
+      "best degree 4\n",
       "best lambdas : 1.0\n",
       "best degree 3\n"
      ]
@@ -226,13 +226,13 @@
    "source": [
     "best_degree_lambda = []\n",
     "for i in range(len(buckets)):\n",
-    "    best_degree_lambda.append(best_degree_selection(y=y_buckets[i], x=buckets[i], degrees=[3], \n",
-    "                      k_fold=5, lambdas=np.linspace(0.1, 1, 10)))"
+    "    best_degree_lambda.append(best_degree_selection(y=y_buckets[i], x=buckets[i], degrees=range(3,8), \n",
+    "                      k_fold=5, lambdas=np.logspace(-2, 0, 15)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -241,11 +241,11 @@
      "text": [
       "(93,)\n",
       "(93,)\n",
+      "(155,)\n",
       "(93,)\n",
       "(93,)\n",
       "(93,)\n",
-      "(93,)\n",
-      "(93,)\n",
+      "(124,)\n",
       "(93,)\n"
      ]
     }
@@ -282,14 +282,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy = 0.8027\n"
+      "Accuracy = 0.80842\n"
      ]
     }
    ],
@@ -300,15 +300,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "submission_y, submission_x, ids_test = load_csv_data(DATA_TEST_PATH, sub_sample=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
     "ids_array = ids_test\n",
     "pri_jet_num_feature = submission_x[:, 22]\n",
-    "der_mass_mmc_col_feature = submission_x_backup[:, 0]\n",
+    "der_mass_mmc_col_feature = submission_x[:, 0]\n",
     "ids_array = np.column_stack((ids_array, pri_jet_num_feature))\n",
     "ids_array = np.column_stack((ids_array, der_mass_mmc_col_feature))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "id_buckets = get_id_buckets(ids_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "submission = predict_labels(weights[0], build_poly(submission_x_buckets[0], best_degree_lambda[0][\"degree\"]))\n",
+    "submission = np.column_stack((submission, id_buckets[0]))\n",
+    "for i in range(1, len(weights)):\n",
+    "    degree = best_degree_lambda[i][\"degree\"]\n",
+    "    predictions = predict_labels(weights[i], build_poly(submission_x_buckets[i], degree))\n",
+    "    predictions = np.column_stack((predictions, id_buckets[i]))\n",
+    "    submission = np.concatenate((submission, predictions))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "submission = submission[submission[:, 1].argsort()]\n",
+    "submission = submission[:, 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "create_csv_submission(ids_test, submission, \"../data/output.csv\")"
    ]
   },
   {
