started the run.py

--- a/scripts/project1.ipynb
+++ b/scripts/project1.ipynb
@@ -189,64 +189,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Compute polynomial\n",
-    "def compute_poly():\n",
-    "    for i in range(len(buckets))\n",
-    "    test_buck"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "best lambdas : 1.0\n",
-      "best degree 3\n",
-      "best lambdas : 0.01\n",
-      "best degree 3\n",
-      "best lambdas : 0.013894954943731374\n",
-      "best degree 5\n",
-      "best lambdas : 0.0517947467923121\n",
-      "best degree 3\n",
-      "best lambdas : 0.01\n",
-      "best degree 3\n",
-      "best lambdas : 1.0\n",
-      "best degree 3\n",
-      "best lambdas : 1.0\n",
-      "best degree 4\n",
-      "best lambdas : 1.0\n",
-      "best degree 3\n"
-     ]
-    }
-   ],
-   "source": [
     "best_degree_lambda = []\n",
     "for i in range(len(buckets)):\n",
-    "    best_degree_lambda.append(best_degree_selection(y=y_buckets[i], x=buckets[i], degrees=range(3,8), \n",
-    "                      k_fold=5, lambdas=np.logspace(-2, 0, 15)))"
+    "    best_degree_lambda.append(best_degree_selection(y=y_buckets[i], x=buckets[i], degrees=range(13), \n",
+    "                      k_fold=5, lambdas=np.linspace(0.1, 200, 200)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(93,)\n",
-      "(93,)\n",
+      "(31,)\n",
+      "(62,)\n",
       "(155,)\n",
+      "(31,)\n",
       "(93,)\n",
-      "(93,)\n",
-      "(93,)\n",
+      "(62,)\n",
       "(124,)\n",
-      "(93,)\n"
+      "(31,)\n"
      ]
     }
    ],
@@ -282,14 +247,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy = 0.80842\n"
+      "Accuracy = 0.80568\n"
      ]
     }
    ],
@@ -331,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
