more run.py, still needs refactor

--- a/scripts/project1.ipynb
+++ b/scripts/project1.ipynb
@@ -187,7 +187,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best lambdas : 62.380402010050254\n",
+      "best degree 0\n"
+     ]
+    }
+   ],
    "source": [
     "best_degree_lambda = []\n",
     "for i in range(len(buckets)):\n",
