--- a/scripts/project1.ipynb
+++ b/scripts/project1.ipynb
@@ -10,7 +10,7 @@
     "%matplotlib inline\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "#just for the notebook\n",
+    "#just for the notebookbin\n",
     "%run implementations\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
