--- a/scripts/project1.ipynb
+++ b/scripts/project1.ipynb
@@ -185,42 +185,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best lambdas : 62.380402010050254\n",
-      "best degree 0\n"
+      "best lambdas : 0.16363636363636364\n",
+      "best degree 11\n",
+      "best lambdas : 0.4636363636363636\n",
+      "best degree 11\n",
+      "best lambdas : 0.9363636363636363\n",
+      "best degree 11\n",
+      "best lambdas : 0.7454545454545454\n",
+      "best degree 11\n",
+      "best lambdas : 0.9454545454545454\n",
+      "best degree 11\n",
+      "best lambdas : 0.5454545454545454\n",
+      "best degree 11\n",
+      "best lambdas : 1.0\n",
+      "best degree 11\n",
+      "best lambdas : 0.8909090909090909\n",
+      "best degree 11\n"
      ]
     }
    ],
    "source": [
     "best_degree_lambda = []\n",
     "for i in range(len(buckets)):\n",
-    "    best_degree_lambda.append(best_degree_selection(y=y_buckets[i], x=buckets[i], degrees=range(13), \n",
-    "                      k_fold=5, lambdas=np.linspace(0.1, 200, 200)))"
+    "    best_degree_lambda.append(best_degree_selection(y=y_buckets[i], x=buckets[i], degrees=[11], \n",
+    "                      k_fold=5, lambdas=np.linspace(0.1, 1, 100)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_degree_lambda"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(31,)\n",
-      "(62,)\n",
-      "(155,)\n",
-      "(31,)\n",
-      "(93,)\n",
-      "(62,)\n",
-      "(124,)\n",
-      "(31,)\n"
+      "(279,)\n",
+      "(341,)\n",
+      "(279,)\n",
+      "(279,)\n",
+      "(279,)\n",
+      "(279,)\n",
+      "(279,)\n",
+      "(279,)\n"
      ]
     }
    ],
@@ -256,14 +279,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy = 0.80568\n"
+      "Accuracy = 0.82542\n"
      ]
     }
    ],
@@ -274,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
