--- a/scripts/project1.ipynb
+++ b/scripts/project1.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Useful starting lines\n",
     "%matplotlib inline\n",
@@ -96,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +165,7 @@
        "14738"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,32 +176,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "best lambdas : 0.16363636363636364\n",
-      "best degree 11\n",
-      "best lambdas : 0.4636363636363636\n",
-      "best degree 11\n",
-      "best lambdas : 0.9363636363636363\n",
-      "best degree 11\n",
-      "best lambdas : 0.7454545454545454\n",
-      "best degree 11\n",
-      "best lambdas : 0.9454545454545454\n",
-      "best degree 11\n",
-      "best lambdas : 0.5454545454545454\n",
-      "best degree 11\n",
-      "best lambdas : 1.0\n",
-      "best degree 11\n",
-      "best lambdas : 0.8909090909090909\n",
-      "best degree 11\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "best_degree_lambda = []\n",
     "for i in range(len(buckets)):\n",
@@ -220,30 +188,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'degree': 11, 'lambda': 0.0001},\n",
+       " {'degree': 11, 'lambda': 0.0001},\n",
+       " {'degree': 11, 'lambda': 0.0001},\n",
+       " {'degree': 11, 'lambda': 0.0001},\n",
+       " {'degree': 11, 'lambda': 0.0001},\n",
+       " {'degree': 11, 'lambda': 0.0001},\n",
+       " {'degree': 11, 'lambda': 0.0001},\n",
+       " {'degree': 11, 'lambda': 0.0001}]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "best_degree_lambda"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(279,)\n",
       "(341,)\n",
-      "(279,)\n",
-      "(279,)\n",
-      "(279,)\n",
-      "(279,)\n",
-      "(279,)\n",
-      "(279,)\n"
+      "(341,)\n",
+      "(341,)\n",
+      "(341,)\n",
+      "(341,)\n",
+      "(341,)\n",
+      "(341,)\n",
+      "(341,)\n"
      ]
     }
    ],
@@ -259,34 +245,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(14738, 93)"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "build_poly(test_buckets[0], 3).shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy = 0.82542\n"
+      "Accuracy = 0.78582\n"
      ]
     }
    ],
@@ -297,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
