--- a/scripts/project1.ipynb
+++ b/scripts/project1.ipynb
@@ -178,12 +178,33 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best lambdas : 1.0\n",
+      "best degree 9\n",
+      "best lambdas : 1.0\n",
+      "best degree 9\n",
+      "best lambdas : 1.0\n",
+      "best degree 9\n",
+      "best lambdas : 1.0\n",
+      "best degree 9\n",
+      "best lambdas : 1.0\n",
+      "best degree 9\n",
+      "best lambdas : 1.0\n",
+      "best degree 9\n",
+      "best lambdas : 0.1\n",
+      "best degree 9\n"
+     ]
+    }
+   ],
    "source": [
     "best_degree_lambda = []\n",
     "for i in range(len(buckets)):\n",
-    "    best_degree_lambda.append(best_degree_selection(y=y_buckets[i], x=buckets[i], degrees=[11], \n",
-    "                      k_fold=5, lambdas=np.linspace(0.1, 1, 100)))"
+    "    best_degree_lambda.append(best_degree_selection(y=y_buckets[i], x=buckets[i], degrees=[9], \n",
+    "                      k_fold=5, lambdas=np.linspace(0.1, 1, 10)))"
    ]
   },
   {
