--- a/scripts/project1.ipynb
+++ b/scripts/project1.ipynb
@@ -176,26 +176,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best lambdas : 1.0\n",
-      "best degree 9\n",
-      "best lambdas : 1.0\n",
-      "best degree 9\n",
-      "best lambdas : 1.0\n",
-      "best degree 9\n",
-      "best lambdas : 1.0\n",
-      "best degree 9\n",
-      "best lambdas : 1.0\n",
-      "best degree 9\n",
-      "best lambdas : 1.0\n",
+      "best lambdas : 0.5\n",
       "best degree 9\n",
       "best lambdas : 0.1\n",
+      "best degree 9\n",
+      "best lambdas : 0.9\n",
+      "best degree 10\n",
+      "best lambdas : 0.9\n",
+      "best degree 9\n",
+      "best lambdas : 0.9\n",
+      "best degree 9\n",
+      "best lambdas : 0.5\n",
+      "best degree 9\n",
+      "best lambdas : 1.0\n",
+      "best degree 9\n",
+      "best lambdas : 0.8\n",
       "best degree 9\n"
      ]
     }
@@ -203,54 +205,36 @@
    "source": [
     "best_degree_lambda = []\n",
     "for i in range(len(buckets)):\n",
-    "    best_degree_lambda.append(best_degree_selection(y=y_buckets[i], x=buckets[i], degrees=[9], \n",
+    "    best_degree_lambda.append(best_degree_selection(y=y_buckets[i], x=buckets[i], degrees=[9, 10, 11], \n",
     "                      k_fold=5, lambdas=np.linspace(0.1, 1, 10)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'degree': 11, 'lambda': 0.0001},\n",
-       " {'degree': 11, 'lambda': 0.0001},\n",
-       " {'degree': 11, 'lambda': 0.0001},\n",
-       " {'degree': 11, 'lambda': 0.0001},\n",
-       " {'degree': 11, 'lambda': 0.0001},\n",
-       " {'degree': 11, 'lambda': 0.0001},\n",
-       " {'degree': 11, 'lambda': 0.0001},\n",
-       " {'degree': 11, 'lambda': 0.0001}]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "best_degree_lambda"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(341,)\n",
-      "(341,)\n",
-      "(341,)\n",
-      "(341,)\n",
-      "(341,)\n",
-      "(341,)\n",
-      "(341,)\n",
-      "(341,)\n"
+      "(279,)\n",
+      "(279,)\n",
+      "(310,)\n",
+      "(279,)\n",
+      "(279,)\n",
+      "(279,)\n",
+      "(279,)\n",
+      "(279,)\n"
      ]
     }
    ],
@@ -275,14 +259,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy = 0.78582\n"
+      "Accuracy = 0.82514\n"
      ]
     }
    ],
@@ -409,9 +393,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 1
 }
