run.py is working, outputing result, not best one though

--- a/scripts/project1.ipynb
+++ b/scripts/project1.ipynb
@@ -176,28 +176,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best lambdas : 0.5\n",
+      "best lambdas : 0.31461538461538463\n",
       "best degree 9\n",
-      "best lambdas : 0.1\n",
+      "best lambdas : 0.44153846153846155\n",
       "best degree 9\n",
-      "best lambdas : 0.9\n",
-      "best degree 10\n",
-      "best lambdas : 0.9\n",
+      "best lambdas : 0.7461538461538462\n",
       "best degree 9\n",
-      "best lambdas : 0.9\n",
+      "best lambdas : 0.796923076923077\n",
       "best degree 9\n",
-      "best lambdas : 0.5\n",
+      "best lambdas : 0.8984615384615384\n",
+      "best degree 9\n",
+      "best lambdas : 0.4923076923076923\n",
       "best degree 9\n",
       "best lambdas : 1.0\n",
       "best degree 9\n",
-      "best lambdas : 0.8\n",
+      "best lambdas : 0.796923076923077\n",
       "best degree 9\n"
      ]
     }
@@ -205,22 +205,29 @@
    "source": [
     "best_degree_lambda = []\n",
     "for i in range(len(buckets)):\n",
-    "    best_degree_lambda.append(best_degree_selection(y=y_buckets[i], x=buckets[i], degrees=[9, 10, 11], \n",
-    "                      k_fold=5, lambdas=np.linspace(0.1, 1, 10)))"
+    "    best_degree_lambda.append(best_degree_selection(y=y_buckets[i], x=buckets[i], degrees=[9, 11], \n",
+    "                      k_fold=5, lambdas=np.linspace(0.01, 1, 40)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_degree_lambda"
+    "best_degree_lambda = [{'degree': 9, 'lambda': 0.31461538461538463},\n",
+    " {'degree': 9, 'lambda': 0.44153846153846155},\n",
+    " {'degree': 9, 'lambda': 0.7461538461538462},\n",
+    " {'degree': 9, 'lambda': 0.796923076923077},\n",
+    " {'degree': 9, 'lambda': 0.8984615384615384},\n",
+    " {'degree': 9, 'lambda': 0.4923076923076923},\n",
+    " {'degree': 9, 'lambda': 1.0},\n",
+    " {'degree': 9, 'lambda': 0.796923076923077}]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +236,7 @@
      "text": [
       "(279,)\n",
       "(279,)\n",
-      "(310,)\n",
+      "(279,)\n",
       "(279,)\n",
       "(279,)\n",
       "(279,)\n",
@@ -259,14 +266,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy = 0.82514\n"
+      "Accuracy = 0.82544\n"
      ]
     }
    ],
